Improved BukkitItemStackConfig * Use Paper Stack display options using MiniMessage * No longer read NBTTags that are already handled by the common config settings.